using EWMS.Models;
using System.Linq.Expressions;

namespace EWMS.Repositories.Interfaces
{
    public interface IGenericRepository<T> where T : class
    {
        EWMSDbContext Context { get; }
        Task<T?> GetByIdAsync(int id);
        Task<IEnumerable<T>> GetAllAsync();
        Task<IEnumerable<T>> FindAsync(Expression<Func<T, bool>> predicate);
        Task<T?> FirstOrDefaultAsync(Expression<Func<T, bool>> predicate);
        Task AddAsync(T entity);
        void Update(T entity);
        void Delete(T entity);
        Task<bool> ExistsAsync(Expression<Func<T, bool>> predicate);
        Task SaveAsync();
    }
}
